<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gutierrez.login.Contenido">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_contact"
        android:orderInCategory="30"
        android:title="@string/Contact"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="10"
        android:icon="@drawable/ic_launcher_usericon"
        android:title="@string/action_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save"
        android:orderInCategory="20"
        android:icon="@drawable/ic_launcher_save"
        android:title="@string/action_save"
        app:showAsAction="never" />
</menu>
